Completed CRUD
Completed Update and Delete methods as well as corresponding test methods.
